src/grid.scss
@import "./mixins/breakpoints.scss";
@import "./variables/grid.scss";
@import "./variables/color.scss";

/*
 * Grid classes
 * Component code   : gd
 *
 * Modifier 1       : gap   ( grid gap modifier )
 *                    col   ( grid column modifier )
 *                    cols  ( grid columns template modifier )
 *
 * Modifier 2       : [Modiier 1: gap ]
 *                      s  ( gap size s )
 *                      m  ( gap size m )
 *                      l  ( gap size l )
 *                      xl ( gap size 2xl )
 *
 *                    dvd ( a line which divide the cols )
 *
 *                    eq ( grid with equal sized cols ) [Modifier 1: cols]
 *
 *                      Variables used:
 *                          --gd-cols-eq     ( num cols )
 *                          --gd-cols-eq-m   ( num cols @m )
 *                          --gd-cols-eq-l   ( num cols @l )
 *                          --gd-cols-eq-xl  ( num cols @xl )
 *                          --gd-cols-eq-2xl ( num cols @2xl )
 *
 *                    cus ( grid with custom cols size ) [Modifier 1: cols,col,gap]
 *
 *                      Variables used:
 *                        [Modifier 1: cols]
 *                          --gd-cols-cus     (num of cus cols )
 *                          --gd-cols-cus-m   (num of cus cols @m )
 *                          --gd-cols-cus-l   (num of cus cols @l )
 *                          --gd-cols-cus-xl  (num of cus cols @xl )
 *                          --gd-cols-cus-2xl (num of cus cols @2xl )
 *
 *                    subgrid (subgrid within a col)
 *
 *                      Variables used:
 *                        [Modifier 1: col]
 *                          --gd-col-cus      ( for cus subgrid within a col )
 *
 *                      Variables used:
 *                        [Modifier 1: gap]
 *                          --gd-gap-cus      ( for cus gap size )
 *                          --gd-gap-cus-col  ( to extract the cus col size)
 */

.gd-gap-cus { gap: var(--gd-gap-cus, repeat( $gd-max-cols, 1fr)); }
.gd-gap-s { gap: $gd-gap-s; }
.gd-gap-m { gap: $gd-gap-m; }
.gd-gap-l { gap: $gd-gap-l; }
.gd-gap-xl { gap: $gd-gap-xl; }

.gd-dvd{
    * {
    position: relative;
        &::before {
            content: '';
            position: absolute;
            width: $gd-dvd-width;
            background-color: $clr-bg-l2;
            height: 100%;
            right: calc(-1 * (var(--gd-gap-cus-col, var(--gd-gap-cus))) /2);
        }
        &:last-child::before {
            display:none;
        }
    }
}

.gd-dvd.gd-gap-s *::before {
    right: calc(-1 * $gd-gap-s /2);
}
.gd-dvd.gd-gap-m *::before {
    right: calc(-1 * $gd-gap-m /2);
}
.gd-dvd.gd-gap-l *::before {
    right: calc(-1 * $gd-gap-l /2);
}
.gd-dvd.gd-gap-xl *::before {
    right: calc(-1 * $gd-gap-xl /2);
}

@mixin gd {
    display: grid;
}
@mixin gap($row, $col) {
    row-gap: $row;
    column-gap: $col;
}

.gd-cols-eq { @include gd;
              grid-template-columns: repeat(var(--gd-cols-eq, $gd-max-cols), 1fr);
}
.gd-cols-cus { @include gd;
               grid-template-columns: var(--gd-cols-cus, repeat( $gd-max-cols, 1fr));
}
.gd-col-subgrid { @include gd;
                  grid-template-columns: subgrid;
                  grid-column: var(--gd-col-cus, span 1);
}

@include media-bp-min(m) {
    .gd-cols-eq { grid-template-columns: repeat(var(--gd-cols-eq-m,
                                         var(--gd-cols-eq, $gd-max-cols)), 1fr);
    }
    .gd-cols-cus { grid-template-columns: var(--gd-cols-cus-m,
                                          var(--gd-cols-cus,
                                          repeat( $gd-max-cols, 1fr)));
    }
}
@include media-bp-min(l) {
    .gd-cols-eq { grid-template-columns: repeat(var(--gd-cols-eq-l,
                                         var(--gd-cols-eq-m,
                                         var(--gd-cols-eq, $gd-max-cols))), 1fr);
    }
    .gd-cols-cus { grid-template-columns: var(--gd-cols-cus-l,
                                          var(--gd-cols-cus-m,
                                          var(--gd-cols-cus,
                                          repeat( $gd-max-cols, 1fr))));
    }
}
@include media-bp-min(xl) {
    .gd-cols-eq { grid-template-columns: repeat(var(--gd-cols-eq-xl,
                                         var(--gd-cols-eq-l,
                                         var(--gd-cols-eq-m,
                                         var(--gd-cols-eq, $gd-max-cols)))), 1fr);
    }
    .gd-cols-cus { grid-template-columns: var(--gd-cols-cus-xl,
                                          var(--gd-cols-cus-l,
                                          var(--gd-cols-cus-m, 
                                          var(--gd-cols-cus,
                                          repeat( $gd-max-cols, 1fr)))));
    }
}
@include media-bp-min(2xl) {
    .gd-cols-eq { grid-template-columns: repeat(var(--gd-cols-eq-2xl,
                                         var(--gd-cols-eq-xl,
                                         var(--gd-cols-eq-l,
                                         var(--gd-cols-eq-m,
                                         var(--gd-cols-eq, $gd-max-cols))))), 1fr);
    }
    .gd-cols-cus { grid-template-columns: var(--gd-cols-cus-2xl,
                                          var(--gd-cols-cus-xl,
                                          var(--gd-cols-cus-l,
                                          var(--gd-cols-cus-m,
                                          var(--gd-cols-cus, 
                                          repeat( $gd-max-cols, 1fr))))));
    }
}

